--- a/index.html
+++ b/index.html
@@ -7,5 +7,29 @@
   <body>
     <h1>Hello, World!</h1>
   </body>
+
+
+<style>
+p {
+  font-family: verdana;
+  font-size: 20px;
+
+<head>
+<style>
+  body {
+  background-color: lightblue;
+}
+p {
+  color: red;
+  text-align: center;
+} 
+</style>
+</head>
+</body>
+  <h1>Title Page</h1>
+<p>Start writing here</p>
+<body> 
   
 </html>
+
+
