--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
 
   <body>
-    <h1>Page title!</h1>
-    <p>Start writing</p>
+    <p>Title</h1>
+    <p>Write Here......</p>
 </body> 
   
 </html>
